using dynamic inv data for VLAN population.  Also added credential to initial AWX setup config

--- a/services/awx/frey-awx-values.yaml
+++ b/services/awx/frey-awx-values.yaml
@@ -504,6 +504,7 @@ extraDeploy:
                 credentials:
                   - "Network Device Password"
                   - "GitHub PAT"
+                  - "NetBox Production"
                 ask_limit_on_launch: true
                 ask_variables_on_launch: true
                 extra_vars:
