--- a/lab-aws/example-topology.yaml
+++ b/lab-aws/example-topology.yaml
@@ -26,21 +26,25 @@ topology:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.101
+      cmd: ip addr add 192.168.101.1/24 dev eth1
 
     server2-blue:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.102
+      cmd: ip addr add 192.168.101.2/24 dev eth1
 
     server3-red:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.103
+      cmd: ip addr add 192.168.102.1/24 dev eth1
 
     server4-red:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.104
+      cmd: ip addr add 192.168.102.2/24 dev eth1
 
   links:
     # Spine1 to Leafs
