--- a/lab-aws/example-topology.yaml
+++ b/lab-aws/example-topology.yaml
@@ -26,21 +26,25 @@ topology:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.101
+      exec: ip addr add 192.168.10.1/24 dev eth1
       
     server2-blue:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.102
+      exec: ip addr add 192.168.10.2/24 dev eth1
 
     server3-red:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.103
+      exec: ip addr add 192.168.20.3/24 dev eth1
 
     server4-red:
       kind: linux
       image: alpine:latest
       mgmt-ipv4: 172.20.20.104
+      exec: ip addr add 192.168.20.4/24 dev eth1
 
   links:
     # Spine1 to Leafs
