updated ansible group names and fixed a typo in vlan jinja template

--- a/services/awx/frey-awx-values.yaml
+++ b/services/awx/frey-awx-values.yaml
@@ -462,7 +462,6 @@ extraDeploy:
                 ask_limit_on_launch: true
                 ask_variables_on_launch: true
                 ask_credential_on_launch: true
-                limit: "device_roles_network-device"
                 state: present
             
             - name: Create example Job Template for backing up network devices
@@ -486,7 +485,7 @@ extraDeploy:
                 ask_variables_on_launch: true
                 extra_vars:
                   git_cfg_repo: "{{ git_cfg_repo }}"
-                limit: "device_roles_network-device"
+                limit: "device_roles_leaf, device_roles_spine"
                 state: present
 
             - name: Create example Job Template for generating network device configs
@@ -511,7 +510,7 @@ extraDeploy:
                 ask_variables_on_launch: true
                 extra_vars:
                   git_cfg_repo: "{{ git_cfg_repo }}"
-                limit: "device_roles_network-device"
+                limit: "device_roles_leaf, device_roles_spine"
                 state: present
             
             - name: Create example Job Template for deploying network device configs
@@ -535,7 +534,7 @@ extraDeploy:
                 ask_variables_on_launch: true
                 extra_vars:
                   git_cfg_repo: "{{ git_cfg_repo }}"
-                limit: "device_roles_network-device"
+                limit: "device_roles_leaf, device_roles_spine"
                 state: present
 
             - name: Display completion message
