--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -32,7 +32,7 @@ jobs:
         run: pip install ansible-lint yamllint
       
       - name: Run ansible-lint
-        run: ansible-lint ansible-playbooks/playbooks/
+        run: ansible-lint -x ignore-errors ansible-playbooks/playbooks/
       
       - name: Run yamllint
         run: yamllint ansible-playbooks/playbooks/
@@ -41,3 +41,6 @@ jobs:
         run: |
             pip install j2cli
             find ansible-playbooks/templates/ -name "*.j2" -exec j2 {} \;
+
+      - name: Install ansible collections for netdevops
+        run: ansible-galaxy collection install netbox.netbox:3.19.0 arista.eos:6.2.2 cisco.ios:5.3.0 cisco.iosxr:6.1.1 cisco.nxos:5.3.0 junipernetworks.junos:5.3.1 arista.avd ansible.utils
