--- a/ansible-playbooks/playbooks/deploy_configs.yml
+++ b/ansible-playbooks/playbooks/deploy_configs.yml
@@ -1,19 +1,19 @@
 ---
 - name: Deploy Generated Configurations to Arista Devices
   hosts: all
-  gather_facts: no
+  gather_facts: false
   connection: network_cli
 
   vars:
     git_work_dir: "/tmp/ansible-git-work"
     git_user_email: "awx-{{ awx_job_id }}@frey.example"
     git_user_name: "AWX Job {{ awx_job_id }}"
-    git_repo_url: "{{ git_cfg_repo }}" #Inserted in Job Template definition
+    git_repo_url: "{{ git_cfg_repo }}" # Inserted in Job Template definition
     git_branch: main
-    ansible_check_mode: false
-  
+    ansible_check_mode: false # noqa: var-naming
+
   tasks:
-    - name: Configure Git identity
+    - name: Configure Git identity # noqa: command-instead-of-module run-once
       ansible.builtin.shell: |
         git config --global user.email "{{ git_user_email }}"
         git config --global user.name "{{ git_user_name }}"
@@ -21,7 +21,7 @@
       run_once: true
       changed_when: false
 
-    - name: Clone repository to working directory
+    - name: Clone repository to working directory # noqa: run-once
       ansible.builtin.shell: |
         rm -rf {{ git_work_dir }}
         git clone --depth 1 --branch {{ git_branch }} {{ git_repo_url }} {{ git_work_dir }}
@@ -44,16 +44,16 @@
       ansible.builtin.debug:
         msg: "Deploying configuration to {{ inventory_hostname }}"
 
-    - name: Deploy configuration
+    - name: Deploy configuration # noqa: syntax-check
       arista.eos.eos_config:
         src: "{{ git_work_dir }}/configs/generated/{{ inventory_hostname }}.cfg"
         replace: config
         save_when: modified
-      become: yes
+      become: true
       register: config_result
       check_mode: "{{ ansible_check_mode | default(false) }}"
 
     - name: Display deployment results
       ansible.builtin.debug:
         msg: "Configuration {{ 'would be' if ansible_check_mode else 'was' }} deployed to {{ inventory_hostname }}"
-      when: config_result.changed
+      when: config_result.changed # noqa: no-handler
