triggering pipeline for testing purposes

--- a/ansible-playbooks/playbooks/gather_facts.yml
+++ b/ansible-playbooks/playbooks/gather_facts.yml
@@ -3,7 +3,7 @@
   hosts: all
   gather_facts: false
 
-## TESTING PIPELINE ###
+## TESTING PIPELINE AGAIN ###
 
   tasks:
     - name: Display target host information
