testing pipeline with new yamllinter setting

--- a/ansible-playbooks/playbooks/gather_facts.yml
+++ b/ansible-playbooks/playbooks/gather_facts.yml
@@ -3,7 +3,7 @@
   hosts: all
   gather_facts: false
 
-## TESTING PIPELINE AGAIN ###
+## TESTING PIPELINE Episode III - Return of the Linter ###
 
   tasks:
     - name: Display target host information
