updated gitignore for pybatfish venv and updated folder pattern for config storage to support pybatfish requirements.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ scripts/netbox-helpers/*
 !scripts/netbox-helpers/netbox_purge.py
 clab_netbox_sync.log
 tmp/*
+services/pybatfish/*
+!services/pybatfish/requirements.txt
+!services/pybatfish/pybatfish_start.sh
